RESOLVED FIXED246364
[iOS] Paste alert should not show up in WebKit apps when presenting the edit menu
https://bugs.webkit.org/show_bug.cgi?id=246364
Summary [iOS] Paste alert should not show up in WebKit apps when presenting the edit ...
Wenson Hsieh
Reported 2022-10-11 13:35:41 PDT
Attachments
Wenson Hsieh
Comment 1 2022-10-11 13:55:05 PDT
EWS
Comment 2 2022-10-11 21:34:00 PDT
Committed 255418@main (f134a54c03b7): <https://commits.webkit.org/255418@main> Reviewed commits have been landed. Closing PR #5251 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.